# photonic_skill_project

./: .gitignore  README.md  SiN_edge_coupler.ipynb  environment.yml  pyproject.toml
.github/: dependabot.yml
1_mode_solver/: SiN_single_mode_wg.ipynb  pn_phase_shifter.ipynb
2_SiN_single_mode_wg_FEMWELL/: SiN_single_mode_wg.ipynb
2_passive_design/: S_parameters_mmi2x2_with_bends_3D.csv  mmi2x2.ipynb  mmi2x2.py
3_2x2_splitter_MEEP/: S_parameters_mmi2x2.csv  S_parameters_mmi2x2_2D_final.csv  S_parameters_mmi2x2_2D_fine_sweep.csv  S_parameters_mmi2x2_2D_fixed_gap.csv  S_parameters_mmi2x2_2D_fixed_gap_2.csv  S_parameters_mmi2x2_2D_fixed_gap_3.csv  S_parameters_mmi2x2_2D_fixed_gap_4.csv  S_parameters_mmi2x2_with_bends.csv  S_parameters_mmi2x2_with_bends_3D.csv  S_parameters_mmi2x2_with_bends_3D_3p15.csv  S_parameters_mmi2x2_with_bends_3D_final.csv  directional_coupler.ipynb  mmi2x2.ipynb  mmi2x2.py
3_layout/: transceiver.ipynb
4_bend_waveguide/: bent_dc.ipynb
4_simplest_transceiver_layout_GDSFactory/: transceiver.gds  transceiver.ipynb
6_bend_dc_Tidy3D/: bent_dc.ipynb  straight_dc.ipynb
7_SiN_edge_coupler/: README.md  SiN_edge_coupler.ipynb  fiber_modelling.py  n_core.json
7_SiN_edge_coupler/misc/: sin_edge_coupler_opt_state.pkl
layout/: transceiver.gds
mode_solver/: SiN_single_mode_wg.ipynb  pn_phase_shifter.ipynb
passive_design/: mmi2x2.py
